--- a/public/assets/css/details.css
+++ b/public/assets/css/details.css
@@ -26,7 +26,6 @@ body, .col-md-12, .col-md-8, .col-md-6 {
     color: rgb(49, 112, 111);
 }
 .run-active,.venue {
-    /*color: #ff6d00;*/
     color: #009eff;
 }
 .wicket {
@@ -105,7 +104,7 @@ body, .col-md-12, .col-md-8, .col-md-6 {
 }
 
 .bowling-table th {
-    background-color: #4CAF50;
+    background-color: #ff6d00;
     color: white;
 }
 .bowling-table tr,td {
