--- a/public/assets/css/matchpanel.css
+++ b/public/assets/css/matchpanel.css
@@ -72,6 +72,10 @@
 
 .batting-table .playing{background-color: rgba(164, 242, 0, 0.4)
 }
+.off_strike{
+    background-color: red;
+    color:white;
+}
 .batting-table .out { /*background-color: rgba(209, 13, 0, 0.19)*/
 }
 
@@ -195,8 +199,8 @@
 #out {
     border: none;
     color: #f2f2f2;
-    padding: 14px 28px;
-    font-size: 16px;
+    /*padding: 14px 28px;
+    font-size: 16px;*/
     cursor: pointer;
     background-color: rgba(32, 84, 146, 0.49); /* Orange */
 }
