--- a/public/assets/css/matchpanel.css
+++ b/public/assets/css/matchpanel.css
@@ -277,3 +277,14 @@
     padding-top: 3px;
     padding-bottom: 3px;
 }
+
+
+.runout-dropdown-submenu {
+    position: relative;
+}
+
+.runout-dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
