--- a/public/assets/css/matchpanel.css
+++ b/public/assets/css/matchpanel.css
@@ -278,6 +278,23 @@
     padding-bottom: 3px;
 }
 
+.batting-status {
+    font-size: 16px;
+    background-color: #f9f9f9;
+}
+.batting-status a {
+    text-decoration: none;
+}
+.batting-status a li:hover {
+    background-color: #f1f1f1;
+}
+.batting-status a li {
+    text-align: center;
+    color: #000;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
 
 .runout-dropdown-submenu {
     position: relative;
