--- a/public/assets/css/matchpanel.css
+++ b/public/assets/css/matchpanel.css
@@ -68,11 +68,11 @@
     background-color: rgba(164, 242, 0, 0.4);
 }
 .off_strike {
-    background-color: rgba(164, 242, 0, 0.2);
+    background-color: rgba(164, 242, 0, 0.13);
 }
-.out {
-    background-color: rgba(163, 163, 163, 0.17);
-    color: #797979;
+.player_out {
+    background-color: rgba(163, 163, 163, 0.2);
+
 }
 .run-table th {
     background-color: #4CAF50;
@@ -94,24 +94,28 @@
     border-collapse: collapse;
     width: 100%;
 }
-.batting-table th, td {
+.batting-table th,.batting-table td {
     text-align: left;
     padding: 8px;
+}
+.batting-table td:nth-child(2),.batting-table td:nth-child(3),.batting-table td:nth-child(4),.bowling-table td:nth-child(2),.bowling-table td:nth-child(3),.bowling-table td:nth-child(4) {
+    text-align: center;
+}
+.batting-table th:nth-child(2),.batting-table th:nth-child(3),.batting-table th:nth-child(4),.bowling-table th:nth-child(2),.bowling-table th:nth-child(3),.bowling-table th:nth-child(4) {
+    text-align: center;
 }
 .batting-table .playing {
     background-color: rgba(164, 242, 0, 0.4)
 }
-.batting-table .out {
-    /*background-color: rgba(209, 13, 0, 0.19)*/
-}
+
 .batting-table th {
     background-color: #4CAF50;
     color: white;
 }
-.batting-table tr, td {
+.bowling-table tr,.bowling-table td,.batting-table tr,.batting-table td {
     font-family: Raleway;
     color: #444444;
-    font-size: 3vh;
+    font-size: 1em;
 }
 /*Bating Table End*/
 
@@ -125,24 +129,17 @@
     border-collapse: collapse;
     width: 100%;
 }
-.bowling-table th, td {
+.bowling-table th,.bowling-table td {
     text-align: left;
     padding: 8px;
 }
 .bowling-table .playing {
     background-color: rgba(164, 242, 0, 0.4)
 }
-.bowling-table .out {
-    /*background-color: rgba(209, 13, 0, 0.19)*/
-}
+
 .bowling-table th {
     background-color: #ff6d00;
     color: white;
-}
-.bowling-table tr, td {
-    font-family: Raleway;
-    color: #444444;
-    font-size: 3vh;
 }
 /*Bowling Table End*/
 
@@ -357,4 +354,9 @@
 }
 .start-date-time {
     color: #ff0100;
+}
+
+.btn-batting-out{
+    padding: 8px !important;
+    background-color: #0b7dda;
 }
