--- a/public/assets/css/scoreboard.css
+++ b/public/assets/css/scoreboard.css
@@ -58,6 +58,7 @@ body,
     display: inline;
     background-color: rgb(201, 201, 201);
     padding: 5px;
+    cursor: pointer;
 }
 .innings-toggle li a{
     color: #000;
