--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -8,35 +8,31 @@ p{
 }
 .match-detail-wrap{
     width: 100%;
-    /*border: 1px solid #2581DC;*/
     background-color: #f8f8f8;
     padding-left: 5%;
     margin-top: 3vh;
     padding-top: 2vh;
     padding-bottom: 1vh;
 }
+.match-detail-wrap h2 {
+    margin: 0 0 14px 0;
+    font-family: 'Patua One', cursive;
+}
+
+.match-detail-wrap p {
+    line-height: 120%;
+}
 #main-body a {
     text-decoration: none;
 }
 
-#today-match {
-    text-align: center;
-    font-family: 'Patua One', cursive;
-    font-size: 5vh;
-}
-#upcoming-match {
-    text-align: center;
-    font-family: 'Patua One', cursive;
-    font-size: 5vh;
-}
-
-#recent-match {
+#today-match, #upcoming-match, #recent-match  {
     text-align: center;
     font-family: 'Patua One', cursive;
     font-size: 5vh;
 }
 .team-name {
-    font-size: 6vh;
+    //font-size: 6vh;
     color: #3b3b3b;
 }
 .team-active {
@@ -44,17 +40,16 @@ p{
     color: rgb(49, 112, 111);
 }
 .run-active,.venue {
-    /*color: #ff6d00;*/
     color: #009eff;
 }
 .wicket , .ball-left , .start-date-time {
-    color: #ff0100;
+    color: #e67e22;
 }
 .inactive-team {
     color: #636b6f;
 }
 .ball-left {
-    color: #ff0100 ;
+    color: #e67e22 ;
 }
 .over{
     color: rgb(49, 112, 111);
