--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -26,7 +26,7 @@ p{
     text-decoration: none;
 }
 
-#today-match, #upcoming-match, #recent-match  {
+#today-match, #upcoming-match, #recent-match ,#delayed-match {
     text-align: center;
     font-family: 'Patua One', cursive;
     font-size: 5vh;
@@ -40,7 +40,7 @@ p{
     color: rgb(49, 112, 111);
 }
 .run-active,.venue {
-    color: #009eff;
+    color: #1abe9e;
 }
 .wicket , .ball-left , .start-date-time {
     color: #e67e22;
