--- a/public/assets/css/common-style.css
+++ b/public/assets/css/common-style.css
@@ -1,4 +1,5 @@
 /*--------------      base color #16a085    --------------------------*/
+/*--------------      base color hover #12826c    --------------------------*/
 
 
 /*------------------------------------------------------------------------------------*/
