--- a/public/assets/css/matchpanel.css
+++ b/public/assets/css/matchpanel.css
@@ -33,39 +33,10 @@
     text-align: left;
     padding: 8px;
 }
-.run-table th {
-    background-color: #4CAF50;
-    color: white;
-}
-.run-table tr, td {
-    font-family: Raleway;
-    color: #444444;
-    font-size: 3vh;
-}
 /*Run Table End*/
 
-/*Bating Table*/
 
 
-
-.bowling-table tr,.bowling-table td,.batting-table tr,.batting-table td {
-    font-family: Raleway;
-    color: #444444;
-    font-size: 1em;
-}
-/*Bating Table End*/
-
-/*Bowling Table*/
-
-.bowling-table th,.bowling-table td {
-    text-align: left;
-    padding: 8px;
-}
-.bowling-table .playing {
-    background-color: rgba(164, 242, 0, 0.4)
-}
-
-/*Bowling Table End*/
 
 /*Buttons*/
 
@@ -85,71 +56,49 @@
     /*font-size: 16px;*/
     cursor: pointer;
 }
-.zero {
-    background-color: #e7e7e7;
-    color: black;
+.btn-ghost {
+    background-color: #f4f4f4;
+    color: #16a085;
+    border: 1px solid #16a085;
 }
 /* Gray */
 
-.zero:hover {
+.btn-ghost:hover {
     background: #ddd;
 }
-.one {
-    background-color: #4CAF50;
+.btn-full {
+    background-color: #16a085;
+    color: #fff;
+    border: 1px solid transparent;
 }
-/* Green */
 
-.one:hover {
-    background-color: #46a049;
+.btn-full:hover,
+.btn-full:active,
+.btn-full:visited,
+.btn-full:link {
+    background-color: #12826c;
 }
-.two {
-    background-color: #2196F3;
-}
-/* Blue */
 
-.two:hover {
-    background: #0b7dda;
+.btn-primary {
+    padding: 1px 3px;
 }
-.three {
-    background-color: #ff9800;
-}
-/* Orange */
 
-.three:hover {
-    background: #e68a00;
-}
-.four {
-    background-color: #ac4f00;
-}
-/* Red */
-
-.four:hover {
-    background: #da5900;
-}
-.six {
-    background-color: #f44336;
-}
-/* Red */
-
-.six:hover {
-    background: #da190b;
-}
 .default {
     background-color: #e7e7e7;
     color: black;
 }
-/* Gray */
 
 .default:hover {
     background: #ddd;
 }
 .status-btn {
-    background-color: #2196F3;
+    background-color: #107360;
+    padding: 1px 2px;
 }
 /* Blue */
 
 .status-btn:hover {
-    background: #0b7dda;
+    background: #0e6453;
 }
 #out {
     border: none;
@@ -157,7 +106,7 @@
     /*padding: 14px 28px;
     font-size: 16px;*/
     cursor: pointer;
-    background-color: rgba(32, 84, 146, 0.49);
+    background-color: #12826c;
     /* Orange */
 }
 .no-ball {
@@ -255,12 +204,7 @@
     font-size: 3vh;
     color: #3b3b3b;
 }
-.over{
-    color: rgb(49, 112, 111);
-}
-.start-date-time {
-    color: #ff0100;
-}
+
 
 .btn-batting-out{
     padding: 8px !important;
