some button added to mygame page

--- a/public/assets/css/mygames.css
+++ b/public/assets/css/mygames.css
@@ -46,6 +46,7 @@ p{
 .team-name {
     font-size: 6vh;
     color: #3b3b3b;
+    font-family: 'Patua One', cursive;
 }
 .team-active {
     font-size: 1.8em;
