--- a/public/assets/css/matchpanel.css
+++ b/public/assets/css/matchpanel.css
@@ -140,22 +140,31 @@
 }
 
 .batting-status {
-    font-size: 16px;
+   // font-size: 16px;
     background-color: #f9f9f9;
 }
-.batting-status a {
-    text-decoration: none;
-}
-.batting-status a li:hover {
+
+.batting-status li:hover {
     background-color: #f1f1f1;
 }
-.batting-status a li {
+.batting-status li {
     text-align: center;
     color: #000;
     padding-top: 3px;
     padding-bottom: 3px;
 }
 
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+   display: block !important;
+}
 
 .runout-dropdown-submenu {
     position: relative;
