--- a/public/assets/css/matchpanel.css
+++ b/public/assets/css/matchpanel.css
@@ -163,7 +163,7 @@
     top: 0;
     left: 100%;
     margin-top: -1px;
-   display: block !important;
+   //display: block !important;
 }
 
 .runout-dropdown-submenu {
